@@ -1,5 +1,8 @@
 Release 1.15.1 - ??/??/????
 
+  * Allow users to turn off extraction of headers and footers
+    from .doc, .docx, .xls, .xlsx, .xlsb (TIKA-2362)
+
   * Extract text from charts in .docx, .pptx, .xlsx and .xlsb
     (TIKA-2254).
 
